--- a/frontend/src/_styles/styles.scss
+++ b/frontend/src/_styles/styles.scss
@@ -292,12 +292,8 @@ mat-icon[mat-group] {
   top: 2vmax !important;
 }
 
-.mat-progress-bar[mode='determine'] {
-  &.mat-primary {
-    .mat-progress-bar-fill::after {
-      background-color: greenyellow !important;
-    }
-  }
+.mat-mdc-progress-bar[mode='determine'] {
+  --mdc-linear-progress-active-indicator-color: greenyellow !important;
 }
 
 .mat-progress-bar.mat-accent {
