--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -23,7 +23,7 @@
   </a>
 </nav>
 <nav *ngIf="links && itemLinks" mat-tab-nav-bar mat-align-tabs="center" [tabPanel]="tabPanel">
-  <button mat-icon-button class="mat-item" (click)="back()">
+  <button mat-icon-button (click)="back()">
     <mat-icon>arrow_backward</mat-icon>
   </button>
   <div class="mat-basket-container-small" style="top: 8px;">
