remove github/update facebook button

--- a/frontend/src/app/login/login.component.html
+++ b/frontend/src/app/login/login.component.html
@@ -61,7 +61,7 @@
     [innerHtml]="msg['expl.security']"
   ></div>-->
 
-  <div class="mat-into-panel">
+  <!-- <div class="mat-into-panel">
     <h2 *ngIf="msg">{{ msg['expl.report'] }}</h2>
     <div class="btn_bar">
       <div style="display: flex; grid-area: 1 / 1">
@@ -75,7 +75,7 @@
       </div>
       <ms-menu style="grid-area: 1 / 1; pointer-events: none"></ms-menu>
     </div>
-  </div>
+  </div> -->
 
   <div class="mat-into-panel">
     <h2 *ngIf="msg">{{ msg['expl.follow'] }}</h2>
@@ -83,7 +83,7 @@
       <div style="display: flex">
         <div class="btn_base">
           <div class="facebook container">
-            <a href="https://www.facebook.com/MyScouteeT" target="_blank">
+            <a href="https://www.facebook.com/myscoutee.dating" target="_blank">
               <img class="img" />
             </a>
           </div>
