--- a/frontend/src/app/dating/components/forms/profile-status/profile-status.component.html
+++ b/frontend/src/app/dating/components/forms/profile-status/profile-status.component.html
@@ -1,4 +1,4 @@
-<h1 mat-dialog-title>
+<!--<h1 mat-dialog-title>
   <button mat-icon-button class="mat-cancel" (click)="back()">
     <mat-icon>arrow_backward</mat-icon>
   </button>
@@ -47,4 +47,4 @@
       </mat-expansion-panel>
     </mat-accordion>
   </form>
-</div>
+</div>-->
