--- a/frontend/src/app/dating/components/forms/promotion-filter/promotion-filter.component.html
+++ b/frontend/src/app/dating/components/forms/promotion-filter/promotion-filter.component.html
@@ -1,4 +1,4 @@
-<h1 mat-dialog-title>
+<!--<h1 mat-dialog-title>
   <button mat-icon-button class="mat-cancel" (click)="back()">
     <mat-icon>arrow_backward</mat-icon>
   </button>
@@ -21,4 +21,4 @@
       </mat-select>
     </mat-form-field>
   </form>
-</div>
+</div>-->
