--- a/frontend/src/app/dating/components/forms/school/school.component.html
+++ b/frontend/src/app/dating/components/forms/school/school.component.html
@@ -1,4 +1,4 @@
-<h1 mat-dialog-title>
+<!--<h1 mat-dialog-title>
   <button mat-icon-button class="mat-cancel" (click)="back()">
     <mat-icon>arrow_backward</mat-icon>
   </button>
@@ -129,4 +129,4 @@
     class="file_button"
     (change)="selectFile($event)"
   />
-</div>
+</div>-->
